syntax="proto3";

package pb;

option go_package = "./";

message FetchAll {}

message CreateUser{
    string username = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message UserList{
    uint32 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}

message Respose{
    string status = 1;
    string error = 2;
    string message = 3;
}

message Message{
    string content = 1;
}

message MessageResponse{
    string reply = 1;
}